--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@ngrx/effects": "^19.0.1",
+    "@ngrx/store": "^19.0.1",
+    "@ngrx/store-devtools": "^19.0.1",
+    "@tailwindcss/postcss": "^4.0.6",
+    "postcss": "^8.5.2",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
